Opdracht ASPEC 06 afgemaakt

--- a/Semester6_DiceCode4/Semester6_DiceCode4/Views/Shared/_Layout.cshtml
+++ b/Semester6_DiceCode4/Semester6_DiceCode4/Views/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ASPEC_01" asp-action="Index">ASPEC_01</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ASPEC_06" asp-action="Index">ASPEC_06</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
